# home_work_28

./: pyproject.toml
ads/: models.py
ads/urls/: ad.py
ads/views/ad/: __init__.py  create.py  delete.py  update.py  upload.py  view.py
ads/views/category/: __init__.py  create.py  delete.py  update.py  view.py
data/: csv_to_json.py
hw28/: asgi.py  settings.py  urls.py  wsgi.py
users/views/users/: create.py  delete.py  update.py  view.py
