[tool.poetry]
name = "home-work-28"
version = "0.1.0"
description = ""
authors = ["khage"]
readme = "README.md"
packages = [{include = "home_work_28"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
psycopg2 = "^2.9.4"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
